fix buttons on mobile

--- a/less/modules/_buttons.less
+++ b/less/modules/_buttons.less
@@ -1,6 +1,7 @@
 .btn {
   display: inline-block;
   font-weight: bold;
+  margin: .25rem;
   padding: .5rem 1rem;
 }
 
